# tinyprjPartB

PartB/: CMakeLists.txt  Makefile  PartB.7z  README.md  build.ps1  evaluation_report.txt  main.cpp  test.cpp
PartB/include/: DataPoint.h  Dataset.h  Evaluator.h  LinearRegression.h  Matrix.h
PartB/src/: DataPoint.cpp  Dataset.cpp  Evaluator.cpp  LinearRegression.cpp  Matrix.cpp
